# efficientnet-detector

./: .gitignore  README.md  Untitled1.ipynb  move.sh  setup.cfg
.dvc/: config
data/dataset/: annotations.dvc
data/dataset/annotations/: 10006_1459541791.json  10025_562340703.json  10097_664674273.json  10106_190315990.json  10130_1013166704.json  10130_1360338805.json  10130_1672636630.json  10130_388811999.json  10130_613462606.json  1014_229558076.json  10188_593476281.json  10200_134267365.json  10223_232125477.json  10223_606379838.json  10226_461614796.json  10226_530620473.json  10240_780619415.json  10257_881381894.json  1025_1803952236.json  1025_773597682.json  10273_424132168.json  10308_1191653623.json  10314_410335114.json  10317_428643313.json  10383_734190660.json  10412_1057358723.json  10426_309617940.json  10428_305757738.json  10432_1434858530.json  10432_458553546.json  10434_464392024.json  10439_1463218401.json  1045_1019464609.json  1045_65932486.json  10512_1338858456.json  10523_899934324.json  10529_1028645269.json  10529_1467583803.json  10537_1403047837.json  10550_1612042178.json  (+4073 more)
data/models/: .gitignore  epoch=12-step=10426.ckpt.dvc  model.onnx.dvc  model.pth.dvc
efficientnet/: __main__.py  config.py  dataset.py  model.py  train.py  utils.py
efficientnet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
efficientnet/pytorch_classifier/: __main__.py  dataset.py  model.py  train.py
notebooks/: make_annotations.ipynb
notebooks/.ipynb_checkpoints/: make_annotations-checkpoint.ipynb
