[metadata]
name = efficientnet
version = 0.1.0
author = Glen Hanson
author_email = glen.s.hanson@gmail.com

[options]
packages = efficientnet
install_requires = 
    fire

[options.extras_require]
dev =
    black
    isort
    jupyter
    pydocstyle
    pylint
    pytest
    pytest-cov
    pandas
    pyfarmhash
    imageio
    imageio-ffmpeg
    torchmetrics
    pytorch-lightning



[options.entry_points]
console_scripts = 
    efficientnet = efficientnet.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import